--- a/config/app/templates/home.html
+++ b/config/app/templates/home.html
@@ -17,10 +17,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         <a class="nav-link" href="{% url 'tasks'%}"> Tasks</a>
                         <a class="nav-link" href="#">Pricing</a>
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        {% if request.user.is_autenticated %}
+                        <form method='post'>
+                            {% csrf_token %}
+                            <button type='submit'>logout</button>
+                        </form>
+                        {% else %}
+                        <a class="btn btn-primary" href="{% url "register"%}">Sign Up</a>
+                        <a class="btn btn-primary" href="{% url "login" %}">Log in</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
