--- a/config/app/templates/registration_success.html
+++ b/config/app/templates/registration_success.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-5">
     <div class="alert alert-success" role="alert">
-        Sing up success. Please login.
+        <h1>Sing up success. Please login.</h1>
     </div>
     <a href="{% url 'login' %}" class="btn btn-primary">Log in</a>
 
