--- a/config/app/templates/home.html
+++ b/config/app/templates/home.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="{% url "home" %}">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -20,8 +20,8 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         <a class="nav-link" href="{% url 'tasks'%}"> Tasks</a>
                         <a class="nav-link" href="#">Pricing</a>
-                        {% if request.user.is_autenticated %}
-                        <form method='post'>
+                        {% if request.user.is_authenticated %}
+                        <form method='post' action="{% url 'logout' %}">
                             {% csrf_token %}
                             <button type='submit'>logout</button>
                         </form>
